--- a/ATMusic/Controllers/TimerVC/TimerViewController.xib
+++ b/ATMusic/Controllers/TimerVC/TimerViewController.xib
@@ -23,6 +23,37 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Zi-FG-IjP" userLabel="Top View">
+                    <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sleep timer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MiU-H0-9hf">
+                            <rect key="frame" x="94" y="12" width="188" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.88235294119999996" green="0.16078431369999999" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xoQ-SP-W93">
+                            <rect key="frame" x="8" y="7" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="xoQ-SP-W93" secondAttribute="height" multiplier="1:1" id="aQe-rE-PUb"/>
+                            </constraints>
+                            <state key="normal" image="DownArrowRed30"/>
+                            <connections>
+                                <action selector="didTapDismisButton:" destination="-1" eventType="touchUpInside" id="nsa-FW-gbb"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="MiU-H0-9hf" firstAttribute="width" secondItem="3Zi-FG-IjP" secondAttribute="width" multiplier="1/2" id="2Rn-qT-rwR"/>
+                        <constraint firstItem="MiU-H0-9hf" firstAttribute="centerY" secondItem="3Zi-FG-IjP" secondAttribute="centerY" id="XMl-1p-yhx"/>
+                        <constraint firstItem="MiU-H0-9hf" firstAttribute="centerX" secondItem="3Zi-FG-IjP" secondAttribute="centerX" id="alI-AE-3xS"/>
+                        <constraint firstAttribute="height" constant="44" id="i52-AW-bWS"/>
+                        <constraint firstItem="xoQ-SP-W93" firstAttribute="width" secondItem="3Zi-FG-IjP" secondAttribute="width" multiplier="30/375" id="nbV-on-FE6"/>
+                        <constraint firstItem="xoQ-SP-W93" firstAttribute="centerY" secondItem="3Zi-FG-IjP" secondAttribute="centerY" id="rAo-0u-zwb"/>
+                        <constraint firstItem="xoQ-SP-W93" firstAttribute="leading" secondItem="3Zi-FG-IjP" secondAttribute="leading" constant="8" id="wSX-ui-Hjy"/>
+                    </constraints>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sng-oE-XiJ" userLabel="Bottom View">
                     <rect key="frame" x="0.0" y="320" width="375" height="347"/>
                     <subviews>
@@ -111,7 +142,7 @@
                         <constraint firstItem="L3E-LA-V0N" firstAttribute="leading" secondItem="gSn-5L-GfX" secondAttribute="trailing" id="vOd-Xc-HGw"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bOR-nA-8yx" userLabel="Top View">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bOR-nA-8yx" userLabel="Center View">
                     <rect key="frame" x="0.0" y="64" width="375" height="256"/>
                     <subviews>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TgH-Jd-q50">
@@ -142,63 +173,21 @@
                         <constraint firstItem="TgH-Jd-q50" firstAttribute="centerY" secondItem="bOR-nA-8yx" secondAttribute="centerY" id="pY4-8l-yFQ"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G4L-0A-WxA">
-                    <rect key="frame" x="0.0" y="0.0" width="50" height="64"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xoQ-SP-W93">
-                            <rect key="frame" x="10" y="17" width="30" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="xoQ-SP-W93" secondAttribute="height" multiplier="1:1" id="mPo-K5-VcB"/>
-                            </constraints>
-                            <state key="normal" image="DownArrowRed30"/>
-                            <connections>
-                                <action selector="didTapDismisButton:" destination="-1" eventType="touchUpInside" id="nsa-FW-gbb"/>
-                            </connections>
-                        </button>
-                    </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstItem="xoQ-SP-W93" firstAttribute="width" secondItem="G4L-0A-WxA" secondAttribute="width" multiplier="30/93" id="Eb2-A0-nvE"/>
-                        <constraint firstItem="xoQ-SP-W93" firstAttribute="centerY" secondItem="G4L-0A-WxA" secondAttribute="centerY" id="xFI-co-2Cl"/>
-                        <constraint firstItem="xoQ-SP-W93" firstAttribute="centerX" secondItem="G4L-0A-WxA" secondAttribute="centerX" id="yra-QR-zTy"/>
-                    </constraints>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="Eb2-A0-nvE"/>
-                        </mask>
-                    </variation>
-                </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sleep timer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MiU-H0-9hf">
-                    <rect key="frame" x="93" y="28" width="188" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.88235294119999996" green="0.16078431369999999" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
             <color key="backgroundColor" red="0.91372549020000005" green="0.91372549020000005" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="G4L-0A-WxA" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="0rh-26-mgj"/>
                 <constraint firstItem="bOR-nA-8yx" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="35Z-4U-omz"/>
-                <constraint firstItem="MiU-H0-9hf" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="28" id="3T9-45-ISt"/>
-                <constraint firstItem="bOR-nA-8yx" firstAttribute="top" secondItem="G4L-0A-WxA" secondAttribute="bottom" id="4Er-MJ-sBZ"/>
-                <constraint firstItem="MiU-H0-9hf" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="1/2" id="7y3-jU-0O3"/>
-                <constraint firstItem="G4L-0A-WxA" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="50/375" id="EbW-ci-dfa"/>
-                <constraint firstItem="G4L-0A-WxA" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="NRf-A5-T4y"/>
-                <constraint firstItem="G4L-0A-WxA" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="aUm-Xb-aNz"/>
+                <constraint firstItem="3Zi-FG-IjP" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ODY-TV-zAf"/>
+                <constraint firstItem="3Zi-FG-IjP" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="Qrv-FS-gtY"/>
+                <constraint firstItem="3Zi-FG-IjP" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="aS7-VT-KaL"/>
                 <constraint firstItem="bOR-nA-8yx" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="bA1-XC-QhS"/>
                 <constraint firstItem="bOR-nA-8yx" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="dmd-F1-a5l"/>
                 <constraint firstItem="sng-oE-XiJ" firstAttribute="top" secondItem="bOR-nA-8yx" secondAttribute="bottom" id="h4o-1z-qyy"/>
-                <constraint firstItem="MiU-H0-9hf" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="o0Y-f0-OCG"/>
                 <constraint firstAttribute="trailing" secondItem="sng-oE-XiJ" secondAttribute="trailing" id="ytX-92-uBg"/>
                 <constraint firstAttribute="bottom" secondItem="sng-oE-XiJ" secondAttribute="bottom" id="zjq-6D-Kom"/>
                 <constraint firstItem="sng-oE-XiJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="zqD-Qs-n51"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="0rh-26-mgj"/>
-                </mask>
-            </variation>
             <point key="canvasLocation" x="324.5" y="364.5"/>
         </view>
     </objects>
