--- a/ATMusic/Controllers/ChartViewController/ChartViewController.xib
+++ b/ATMusic/Controllers/ChartViewController/ChartViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChartViewController" customModule="ATMusic" customModuleProvider="target">
             <connections>
+                <outlet property="indicatorView" destination="qAV-7T-EQK" id="yfW-m5-xU6"/>
                 <outlet property="tableView" destination="Z81-vD-SBb" id="psy-tK-yyN"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -20,11 +21,17 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="qAV-7T-EQK">
+                    <rect key="frame" x="177" y="324" width="20" height="20"/>
+                    <color key="color" red="0.88235294119999996" green="0.16078431369999999" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
+                </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Z81-vD-SBb" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="1qA-Be-NyS"/>
+                <constraint firstItem="qAV-7T-EQK" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="8Lp-H4-OA4"/>
                 <constraint firstItem="Z81-vD-SBb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Kon-nD-FD7"/>
+                <constraint firstItem="qAV-7T-EQK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Wb0-3V-Cbe"/>
                 <constraint firstAttribute="trailing" secondItem="Z81-vD-SBb" secondAttribute="trailing" id="iuT-lA-eCL"/>
                 <constraint firstAttribute="bottom" secondItem="Z81-vD-SBb" secondAttribute="bottom" id="kpa-lK-pop"/>
             </constraints>
