--- a/ATMusic/Controllers/PlaylistViewController/DetailPlaylistVC/DetailPlaylistViewController.xib
+++ b/ATMusic/Controllers/PlaylistViewController/DetailPlaylistVC/DetailPlaylistViewController.xib
@@ -12,7 +12,7 @@
                 <outlet property="avatar" destination="qcS-2m-JZt" id="4NL-Ef-8wb"/>
                 <outlet property="editButton" destination="txm-OY-6Xr" id="eJA-ye-9RY"/>
                 <outlet property="numberOfSong" destination="QIz-mD-jRW" id="6Es-5U-fET"/>
-                <outlet property="playlistNameTF" destination="ENC-Vx-Otl" id="8UF-H8-9GE"/>
+                <outlet property="playlistNameTextField" destination="ENC-Vx-Otl" id="eBk-V9-qa0"/>
                 <outlet property="tableView" destination="dkd-5z-piR" id="97K-og-Sg4"/>
                 <outlet property="titleLabel" destination="CUc-kE-esT" id="xIL-nK-LfG"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
